# home_network

./: .gitignore  compose.yaml  justfile
clients/: Cargo.toml  hello
clients/src/: communicate.rs
home_network_clients/: Cargo.toml
home_network_clients/src/: communicate.rs  lib.rs  main.rs  wifi.rs
interface/: Cargo.toml
interface/src/: lib.rs
server/: Cargo.toml  query.sql  schema.sql
server/src/: main.rs
web/: Cargo.toml
web/src/: main.rs
web/static/js/: timeseries.js
web/templates/: base.html  index.html
