[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
serde_json = "1.0.140"
serde = {version="1.0.219", features=["derive"]}
async-sqlite = "0.5.1"
# polars = { version = "0.46.0" , features=["lazy", "strings"]}
tokio = {version="1.45.0", features=["full"]}
axum = {version="0.8.4", features=["ws"]}
tower-http = { version = "0.6.4", features = ["fs"] }
